Sat May 12 11:03:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ASNMP/asnmp/transaction.cpp:
        * Kokyu/Dispatch_Deferrer.cpp:
          Compare return value of schedule_timer with -1

        * ace/OS_NS_time.h:
          None of the windows compilers define ACE_LACKS_LONGLONG_T

        * bin/PerlACE/TestTarget_WinCE.pm:
          Typo fix

Sat May 12 11:01:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          None of the windows compilers define ACE_LACKS_LONGLONG_T

Sat May 12 10:54:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Numeric_Limits.h:
          Fixed typo

Fri May 11 17:42:08 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (mask_ops_i): Return -1 if epoll_ctl
          fails and we don't recover from it. Fixes Bugzilla #4019. Thanks
          to David Simmonds for this fix.

Fri May  4 17:25:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.cpp:
          Fixed incorrect check of the return value of schedule_timer,
          an error is indicated with -1, not 0. Thanks to Deux deVille
          <dev2 at weitling dot net> for reporting this

Thu May  3 07:15:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3673_Regression_Test.cpp:
          Fixed typo

Wed May  2 18:36:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_math.h:
          Fixed compile warning with WinCE

Wed May  2 17:08:28 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:

          Added Markus Manck <Markus dot Manck at Philotech dot de>

Tue May  1 17:38:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
          Added -project_root to override $ACE_ROOT as root to search for
          solutions. This is needed when using this script in a flat directory
          layout
