@@ -21,21 +21,36 @@ ACE_INLINE void
 ACE_High_Res_Timer::hrtime_to_tv (ACE_Time_Value &tv,
                                   const ACE_hrtime_t hrt)
 {
-  // The following are based on the units of global_scale_factor_
-  // being 1/microsecond.  Therefore, dividing by it converts
-  // clock ticks to microseconds.
-  tv.sec ((long) (hrt / (ACE_UINT32) ACE_HR_SCALE_CONVERSION /
+#if !defined (ACE_WIN32)
+    // The following are based on the units of global_scale_factor_
+    // being 1/microsecond.  Therefore, dividing by it converts
+    // clock ticks to microseconds.
+    tv.sec ((time_t) (hrt / (ACE_UINT32) ACE_HR_SCALE_CONVERSION /
                   global_scale_factor ()));
 
-  // Calculate usec in a manner that's compatible with ACE_U_LongLong.
-  // hrt = (tv.sec * ACE_ONE_SECOND_IN_USECS + tv.usec) * global_scale_factor_
-  // tv.usec = hrt / global_scale_factor_ - tv.sec * ACE_ONE_SECOND_IN_USECS
-  // That first term will be lossy, so factor out global_scale_factor_:
-  // tv.usec = (hrt - tv.sec * ACE_ONE_SECOND_IN_USECS * global_scale_factor_)/
-  //           global_scale_factor
-  ACE_hrtime_t tmp = tv.sec ();
-  tmp *= ((ACE_UINT32) ACE_HR_SCALE_CONVERSION * global_scale_factor ());
-  tv.usec ((long) ((hrt - tmp) / global_scale_factor ()));
+    // Calculate usec in a manner that's compatible with ACE_U_LongLong.
+    // hrt = (tv.sec * ACE_ONE_SECOND_IN_USECS + tv.usec) * global_scale_factor_
+    // tv.usec = hrt / global_scale_factor_ - tv.sec * ACE_ONE_SECOND_IN_USECS
+    // That first term will be lossy, so factor out global_scale_factor_:
+    // tv.usec = (hrt - tv.sec * ACE_ONE_SECOND_IN_USECS * global_scale_factor_)/
+    //           global_scale_factor
+    ACE_hrtime_t tmp = tv.sec ();
+    tmp *= ((ACE_UINT32) ACE_HR_SCALE_CONVERSION * global_scale_factor ());
+    tv.usec ((suseconds_t) ((hrt - tmp) / global_scale_factor ()));
+#else
+
+    // This a higher-precision version, specific for Windows systems
+    // The following are based on the units of global_scale_factor_
+    // being 1/microsecond.  Therefore, dividing by it converts
+    // clock ticks to microseconds.
+    tv.sec ((time_t) (hrt / global_scale_factor () ));
+
+    // Calculate usec
+    ACE_hrtime_t tmp = tv.sec ();
+    tmp *= global_scale_factor ();
+    tv.usec ((suseconds_t) ((hrt - tmp) * ACE_HR_SCALE_CONVERSION / global_scale_factor ()));
+
+#endif
 }
 
 
@@ -139,13 +154,21 @@ ACE_High_Res_Timer::stop_incr (const ACE_OS::ACE_HRTimer_Op op)
 ACE_INLINE void
 ACE_High_Res_Timer::elapsed_microseconds (ACE_hrtime_t &usecs) const
 {
+
+#if !defined (ACE_WIN32)
   ACE_hrtime_t elapsed = ACE_High_Res_Timer::elapsed_hrtime (this->end_,
                                                              this->start_);
   usecs = (ACE_hrtime_t) (elapsed / global_scale_factor ());
+#else
+  usecs = (ACE_High_Res_Timer::elapsed_hrtime (this->end_, this->start_) *
+           ACE_HR_SCALE_CONVERSION) /
+          global_scale_factor ();
+#endif
 }
 
 ACE_INLINE void
-ACE_High_Res_Timer::global_scale_factor (ACE_UINT32 gsf)
+ACE_High_Res_Timer::global_scale_factor (
+    ACE_High_Res_Timer::global_scale_factor_type gsf)
 {
   global_scale_factor_ = gsf;
 }
